# TreeLoRA-RTX4090

./: .gitignore  Diagnolsed.md  README.md  Setup.md  metrics.py  pyproject.toml  requirements.txt  train.py
docs/: Comprehensive_Comparison.md  Comprehensive_Comparison_VI.md
evaluations/: eval_vit.py
inference/: collect_results.py
model/: base_model.py  lora_vit.py
model/Regular/: Tree_LoRA.py  Tree_LoRA_ViT.py  Tree_LoRA_origin.py
scripts/lora_based_methods/: Tree_LoRA.sh  Tree_LoRA_ViT.sh
tmp/data_files/: evaldata_332f62d7886bc10e7cd0ae1212efe0c1a2eb8fe4df3b56a0b07af5228f6477dd.pt  evaldata_4ce4b5946e21ac4a077b6776e084b4fea6745b2aa81da4e249e47ad2fc4f4917.pt  evaldata_6942ade36a82cfe308ef134bc9318b96379de350bdf04293814a593640b00de3.pt  evaldata_c7ece2b4ff5359638bca09fab76abfc5b62dd28b60e2e3ad75dd42fcb479f9ea.pt  evaldata_e7dc00a194c92496dc0fa509a983fb8a0ae04b4adc82735714fdf5148c28aec2.pt  evaldata_eee3b49e2ba352d1ea6e094072a111c77bf9232ea490fa5deeb4a1b2e20a8e4e.pt  evaldata_f1332938fc394c3183df4df9befaf80d9d18e78aead4451472a68899ca5947cf.pt  evaldata_ffd530c50cab78194850c283eaf7d23e7892592214afac405657305ccb06b8eb.pt  testdata_332f62d7886bc10e7cd0ae1212efe0c1a2eb8fe4df3b56a0b07af5228f6477dd.pt  testdata_4ce4b5946e21ac4a077b6776e084b4fea6745b2aa81da4e249e47ad2fc4f4917.pt  testdata_6942ade36a82cfe308ef134bc9318b96379de350bdf04293814a593640b00de3.pt  testdata_c7ece2b4ff5359638bca09fab76abfc5b62dd28b60e2e3ad75dd42fcb479f9ea.pt  (+11 more)
training/: main.py  main_vit.py
utils/: ds_utils.py  kd_lora_tree.py  kd_lora_tree_origin.py  utils.py
utils/model/: model_utils.py
(+1 files in other folders)
