[project]
name = "treelora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.0.1",
    "bitsandbytes==0.46.1",
    "datasets==2.18.0",
    "deepspeed==0.15.3",
    "einops==0.8.0",
    "evaluate>=0.4.6",
    "flash-attn==2.6.3",
    "fuzzywuzzy==0.18.0",
    "huggingface-hub==0.25.2",
    "ninja>=1.13.0",
    "nltk==3.9.1",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "pillow==11.3.0",
    "python-levenshtein>=0.27.3",
    "qpth==0.0.18",
    "quadprog==0.1.12",
    "requests==2.32.4",
    "rouge==1.0.1",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "sentence-transformers==5.0.0",
    "setuptools>=82.0.0",
    "six==1.16.0",
    "timm==0.6.7",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "tqdm==4.66.5",
    "transformers==4.45.2",
    "triton==3.0.0",
    "vision-transformer==1.0.0",
    "wheel>=0.46.3",
]



[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]


[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
